develop
replace user to users following convention
